bpo-33006 - Correct filter doc string to clarify 2nd argument can be an iterable.